<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message_app"
            android:layout_margin="8dp"
            android:background="#E91E63"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black">

        <TextView
            android:id="@+id/addProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F20707"
            android:gravity="center"
            android:text="@string/addProduct"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/editProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D8A96924"
            android:gravity="center"
            android:text="@string/editProduct"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black">

        <TextView
            android:id="@+id/viewProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F700FF"
            android:gravity="center"
            android:text="@string/viewProduct"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/deleteProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFEB3B"
            android:gravity="center"
            android:text="@string/deleteProduct"
            android:textColor="#000fff"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

</LinearLayout>